# taylor-expand

./: .gitignore  addition.hpp  captured.hpp  composite.hpp  derivative.hpp  fields.hpp  function_traits.hpp  main.cpp  minimiser.hpp  multiply.hpp  multiply_scalar.hpp  operators.hpp  root_solver.hpp  shared_field.hpp  util.hpp
code/: CMakeLists.txt  build_script.sh
code/cmake/modules/: gtest.cmake
code/src/: CMakeLists.txt  main.cpp
code/src/calculus/: CMakeLists.txt  addition.hpp  comparison.hpp  composite.hpp  derivative.hpp  division.hpp  field.hpp  field_vector.hpp  fields.hpp  integrate.hpp  multiplication.hpp  multiply.hpp  multiply_scalar.hpp  operators.hpp  shared_field.hpp  subtraction.hpp  taylor_series.hpp  vector.hpp
code/src/calculus/functions/: constant.hpp  linear.hpp  power.hpp
code/src/calculus/functions/test/: CMakeLists.txt  constant_test.cpp  linear_test.cpp  power_test.cpp
code/src/calculus/operators/: addition.hpp  addition_impl.hpp  division.hpp  division_impl.hpp  math_operators.hpp  multiplication.hpp  multiplication_impl.hpp  subtraction.hpp  subtraction_impl.hpp
code/src/calculus/test/: CMakeLists.txt  addition_test.cpp  derivative_test.cpp  division_test.cpp  integrate_test.cpp  multiplication_test.cpp  subtraction_test.cpp  taylor_series_test.cpp  vector_test.cpp
code/src/calculus/test/taylor_expansions/: CMakeLists.txt  acos_test.cpp  asin_test.cpp  asinh_test.cpp  atan_test.cpp  atanh_test.cpp  cbrt_test.cpp  erf_test.cpp  exp2_test.cpp  exp_test.cpp  expm1_test.cpp  geometric_series_test.cpp  hypot_test.cpp  legendre_polynomials_test.cpp  lerp_test.cpp  log10_test.cpp  log1p_test.cpp  log_test.cpp  pow_test.cpp  rsqrt_test.cpp  simple_examples.cpp  sin_cos_test.cpp  sinh_cosh_test.cpp  sqrt_test.cpp  tan_test.cpp  tanh_test.cpp
code/src/util/: function_traits.hpp  integer.hpp  minimiser.hpp  type_trait_helpers.hpp  util.hpp
code/src/util/test/: CMakeLists.txt  function_traits_test.cpp  minimiser_test.cpp  util_test.cpp
